--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -209,9 +209,9 @@
 
     <section class="popular__courses">
         <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main master-class">
+            <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
                 <!-- for sale overlay add sale class to  block -->
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -222,11 +222,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -245,7 +245,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -256,11 +256,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -290,11 +290,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
