--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -182,9 +182,9 @@
                     </div>
 
                 </div>
-                <span class="f-14 d-block mt-4 c-light-text helvetica-55">25 ივნისი, 2020</span>
+                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">25 ივნისი, 2020</span>
                 <img class="w-100 mt-3 d-flex d-md-none" src="./img/vlog.svg" alt="">
-                <span class="f-14 d-block mt-4 c-light-text helvetica-55">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
+                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
                     რედიზაინი; ატვირთე ნამუშევარი
                     ფეისბუქზე ან ინსტაგრამზე; გამოიყენე ჰეშთეგი #logodigitaledu და მონიშნე
                     ციფრული ინდუსტრიის აკადემია.შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
