--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -227,8 +227,8 @@
     </section>
     <section class="popular__courses">
         <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main">
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+            <div class="d-flex justify-content-between flex-wrap main courses__main row">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -239,11 +239,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -262,7 +262,7 @@
                     </div>
 
                 </div>
-                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3 mb-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
@@ -273,11 +273,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div
-                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
@@ -307,11 +307,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -340,11 +340,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -363,7 +363,7 @@
                     </div>
 
                 </div>
-                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3 mb-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
@@ -374,11 +374,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
@@ -397,7 +397,7 @@
                     </div>
                 </div>
                 <div
-                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                    class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
@@ -408,11 +408,11 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
                                 <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
