--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -195,9 +195,9 @@
 
     <section class="popular__courses">
         <div class="center">
-            <div class="d-flex justify-content-between flex-wrap main courses__main master-class">
+            <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
                 <!-- for sale overlay add sale class to  block -->
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -208,9 +208,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -230,9 +230,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -252,9 +252,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -274,9 +274,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -296,9 +296,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -318,9 +318,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -340,9 +340,9 @@
                         </div>
                         <div class="down__side py-3">
 
-                            <div class="d-flex- flex-column px-3 mb-3">
+                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
