--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -234,98 +234,116 @@
             <div class="scroll-parent home_blocks">
                 <div class="main scroll-child overflow-auto">
                     <div
-                        class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end scroll-block transition">
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
+                        class="block overflow-hidden col-12 px-0 d-flex flex-column justify-content-end scroll-block transition">
+                        <div class="hover__block">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
-                                    განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                            <div class="up__side bc-blue d-flex justify-content-between align-items-end">
+                                <div class="img-block d-flex align-items-center pl-3">
+                                    <img src="./img/Group 342.svg" alt="">
                                 </div>
-                                <div class="right__side d-none d-md-inline-block">
-                                    <button class=" helvetica-75 blue-hover-button">რეგისტრაცია</button>
+                                <img src="./img/face.svg" alt="">
+                            </div>
+                            <div class="down__side py-3">
 
+                                <div class="d-flex- flex-column px-4 mx-1 mb-3">
+                                    <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                                    <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                    <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
+                                        კემულარია</span>
+                                    <span
+                                        class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                        განვითარებამ
+                                        შესაძლებელი გახადა, რომ სხვადასხვა
+                                        პროფესიის ადამიანებმა თავად
+                                        შეძლონ საკუთარი იდეების რეალიზება.</span>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end scroll-block transition">
-                        <div class="up__side bc-orange d-flex justify-content-between align-items-end">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
+                                <div
+                                    class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
+                                    <div class="left__side d-flex align-items-center flex-wrap">
+                                        <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                        <!-- add like__remove class to span for row effect -->
+                                        <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                                    </div>
+                                    <div class="right__side d-none d-md-inline-block">
+                                        <button class=" helvetica-75 blue-hover-button">რეგისტრაცია</button>
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
-                                    განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
-                                <div class="right__side d-none d-md-inline-block">
-                                    <button class=" helvetica-75 orange-hover-button">რეგისტრაცია</button>
-
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div
-                        class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end scroll-block transition">
-                        <div class="up__side bc-purple d-flex justify-content-between align-items-end">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
-                        </div>
-                        <div class="down__side py-3">
+                        class="block overflow-hidden col-12 px-0 d-flex flex-column justify-content-end scroll-block transition">
+                        <div class="hover__block">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
-                                    განვითარებამ
-                                    შესაძლებელი გახადა, რომ სხვადასხვა
-                                    პროფესიის ადამიანებმა თავად
-                                    შეძლონ საკუთარი იდეების რეალიზება.</span>
-                            </div>
-                            <div class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                            <div class="up__side bc-orange d-flex justify-content-between align-items-end">
+                                <div class="img-block d-flex align-items-center pl-3">
+                                    <img src="./img/Group 342.svg" alt="">
                                 </div>
-                                <div class="right__side d-none d-md-inline-block">
-                                    <button class=" helvetica-75 purple-hover-button">რეგისტრაცია</button>
+                                <img src="./img/face.svg" alt="">
+                            </div>
+                            <div class="down__side py-3">
 
+                                <div class="d-flex- flex-column px-4 mx-1 mb-3">
+                                    <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                                    <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                    <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
+                                        კემულარია</span>
+                                    <span
+                                        class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                        განვითარებამ
+                                        შესაძლებელი გახადა, რომ სხვადასხვა
+                                        პროფესიის ადამიანებმა თავად
+                                        შეძლონ საკუთარი იდეების რეალიზება.</span>
+                                </div>
+                                <div
+                                    class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
+                                    <div class="left__side d-flex align-items-center flex-wrap">
+                                        <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                        <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                                    </div>
+                                    <div class="right__side d-none d-md-inline-block">
+                                        <button class=" helvetica-75 orange-hover-button">რეგისტრაცია</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="block overflow-hidden col-12 px-0 d-flex flex-column justify-content-end scroll-block transition">
+                        <div class="hover__block">
+
+                            <div class="up__side bc-purple d-flex justify-content-between align-items-end">
+                                <div class="img-block d-flex align-items-center pl-3">
+                                    <img src="./img/Group 342.svg" alt="">
+                                </div>
+                                <img src="./img/face.svg" alt="">
+                            </div>
+                            <div class="down__side py-3">
+
+                                <div class="d-flex- flex-column px-4 mx-1 mb-3">
+                                    <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                                    <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                    <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
+                                        კემულარია</span>
+                                    <span
+                                        class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                        განვითარებამ
+                                        შესაძლებელი გახადა, რომ სხვადასხვა
+                                        პროფესიის ადამიანებმა თავად
+                                        შეძლონ საკუთარი იდეების რეალიზება.</span>
+                                </div>
+                                <div
+                                    class="bottom mt-1 mt-md-5 d-flex align-items-center justify-content-between pr-3 pt-3">
+                                    <div class="left__side d-flex align-items-center flex-wrap">
+                                        <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                        <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
+                                    </div>
+                                    <div class="right__side d-none d-md-inline-block">
+                                        <button class=" helvetica-75 purple-hover-button">რეგისტრაცია</button>
+
+                                    </div>
                                 </div>
                             </div>
                         </div>
